--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           
 
             <!-- Headline -->
-            <h3 class="my-4"><b>La Sencilla Rutina De 5 minutos De Las Famosas De Hollywood Para Tener Una Piel Envidiable Después De Los 40</b></h3>
+            <h3 class="my-4"><b>La Sencilla Rutina De 5 minutos Para Tener Una Piel Envidiable </b></h3>
 
             <!-- VSL -->
            <div id="vid_63b183028fa5cc0009ec85db" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63b183028fa5cc0009ec85db" src="https://images.converteai.net/9c2b0d08-a7e8-47ba-8580-b648d93f4adb/players/63b183028fa5cc0009ec85db/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63b183028fa5cc0009ec85db" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63b183028fa5cc0009ec85db">var s=document.createElement("script");s.src="https://scripts.converteai.net/9c2b0d08-a7e8-47ba-8580-b648d93f4adb/players/63b183028fa5cc0009ec85db/player.js",s.async=!0,document.head.appendChild(s);</script>
