--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <style type="text/css">
       body {
         color: darkblue;
-        background-image:url("assets/img/bg.jpg");
+        background-image:
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
@@ -51,6 +51,12 @@
               </a>
             </div>
 
+
+              <img src="assets/img/pr.png"img-position:text-center>
+
+
+              <img src="assets/img/cm.png"img-position:text-center>
+              
 
             <!-- Termos de Uso e Política de Privacidade -->
             <div class="text-white mt-4"><a href="termos.html" class="text-black">Términos de uso</a> | <a href="privacidade.html" class="text-black">Política de privacidad</a></div>
