--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             </div>
 
 
-              <img src="assets/img/pr.png"img-position:text-center>
+              <center><img src="assets/img/pr.png">
 
 
-              <img src="assets/img/cm.png"img-position:text-center>
+              <center><img src="assets/img/cm.png"img-position:text-center>
               
 
             <!-- Termos de Uso e Política de Privacidade -->
