--- a/index.html
+++ b/index.html
@@ -52,10 +52,15 @@
             </div>
 
 
-              <center><img src="assets/img/dr.png">
+              <center><img src="assets/img/fr.png">
+                <div>
+                 <h1 class="text-black my-4"><b>El Dr. Harold Lancer es conocido como el Dermatólogo de las Actrices de Hollywood.</b></h1>
+
+                 <h5 class="text-black my-4"><b>El Dr. Harold abrió su primera consulta en 1983 y hasta la fecha cuenta con más de 30.000 pacientes activos, entre los que se encuentran celebridades como Byoncé, Kim Kardashian, Michelle Willims y Scarlett Johansson, entre otras.</b></h5></div>
 
 
-              <center><img src="assets/img/cm.png"img-position:text-center>
+
+              <center><img src="assets/img/cm.png">
               
 
             <!-- Termos de Uso e Política de Privacidade -->
