--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <style type="text/css">
       body {
-        color: darkblue;
+        color: black;
         background-image:
         background-position: center;
         background-size: cover;
@@ -38,7 +38,7 @@
           
 
             <!-- Headline -->
-            <h3 class="my-4"><b>La Sencilla Rutina De 5 minutos De Las Famosas De Hollywood Para Tener Una Piel Envidiable Después De Los 40</b></h3>
+            <h3 class= "text-barkblue my-4"><b>La Sencilla Rutina De 5 minutos De Las Famosas De Hollywood Para Tener Una Piel Envidiable Después De Los 40</b></h3>
 
             <!-- VSL -->
            <div id="vid_63b183028fa5cc0009ec85db" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63b183028fa5cc0009ec85db" src="https://images.converteai.net/9c2b0d08-a7e8-47ba-8580-b648d93f4adb/players/63b183028fa5cc0009ec85db/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63b183028fa5cc0009ec85db" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63b183028fa5cc0009ec85db">var s=document.createElement("script");s.src="https://scripts.converteai.net/9c2b0d08-a7e8-47ba-8580-b648d93f4adb/players/63b183028fa5cc0009ec85db/player.js",s.async=!0,document.head.appendChild(s);</script>
@@ -54,9 +54,9 @@
 
               <center><img src="assets/img/fr.png">
                 <div>
-                 <h1 class="text-black my-4"><b>El Dr. Harold Lancer es conocido como el Dermatólogo de las Actrices de Hollywood.</b></h1>
+                 <h5 class="text-black my-4"><b>El Dr. Harold Lancer es conocido como el Dermatólogo de las Actrices de Hollywood.</b></h5>
 
-                 <h5 class="text-black my-4"><b>El Dr. Harold abrió su primera consulta en 1983 y hasta la fecha cuenta con más de 30.000 pacientes activos, entre los que se encuentran celebridades como Byoncé, Kim Kardashian, Michelle Willims y Scarlett Johansson, entre otras.</b></h5></div>
+                 <h5 class="text-black my-4">El Dr. Harold abrió su primera consulta en 1983 y hasta la fecha cuenta con más de 30.000 pacientes activos, entre los que se encuentran celebridades como Byoncé, Kim Kardashian, Michelle Willims y Scarlett Johansson, entre otras.</h5></div>
 
 
 
