--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <style type="text/css">
       body {
-        color: black;
+        color: darkblue;
         background-image:
         background-position: center;
         background-size: cover;
@@ -38,6 +38,7 @@
           
 
             <!-- Headline -->
+
             <h3 class= "text-barkblue my-4"><b>La Sencilla Rutina De 5 minutos De Las Famosas De Hollywood Para Tener Una Piel Envidiable Después De Los 40</b></h3>
 
             <!-- VSL -->
@@ -52,7 +53,7 @@
             </div>
 
 
-              <center><img src="assets/img/fr.png">
+              <center><img src="assets/img/cr.png">
                 <div>
                  <h5 class="text-black my-4"><b>El Dr. Harold Lancer es conocido como el Dermatólogo de las Actrices de Hollywood.</b></h5>
 
