--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 
-              <center><img src="assets/img/cm.png">
+              <center><img src="assets/img/dm.png">
               
 
             <!-- Termos de Uso e Política de Privacidade -->
