--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.hotmart.com/O78063734B" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.hotmart.com/O78063734B?checkoutMode=10" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">¡QUIERO ACCESO!</span>
                 <span class="span-btn2">(Atención: Vacantes limitadas)</span>   
               </a>
